Fix: file package.json.

--- a/weekly_mission_2/examples4/package.json
+++ b/weekly_mission_2/examples4/package.json
@@ -9,8 +9,7 @@
   "type": "module",
   "transform": {},
   "scripts": {
-    "test": "jest",
-    "test:unit": "node --experimental-vm-modules ./node_modules/.bin/jest"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
